--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ playstore_link                            :                                     
 presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Kitchen Order                             # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : 4.99                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Bring order to your professional kitchen.
