--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Kitchen Order                             # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : 4.99                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Bring order to your professional kitchen.
+app_description                           : Put your professional kitchen in order.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
